--- a/2_fullstack/backend/package.json
+++ b/2_fullstack/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/rishavConsoleLog21/chaiaurbackend#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.5.3"
   }
 }
